# Azazel-Pi

./: .gitignore  1_install_raspap.sh  2_install_azazel.sh  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_ja.md  check-status.sh  clear_rules.sh  fake_alert_generator.py  pyproject.toml  pytest.ini  vector.toml  wan_dynamic_test_plan.md
SIEM/: .env  docker-compose.yml  network_test.sh
azazel_core/: __init__.py  scorer.py
azazel_edge/: __init__.py
azazel_pi/: __init__.py
azazel_web/: app.py
azctl/: __main__.py  cli.py  daemon.py  menu.py  tui_zero.py  tui_zero_textual.py
config/: docker-compose.yml  mattermost.service  nginx.conf  opencanary.conf  suricata_minimal.yaml  vector.toml
configs/: ai_config.json  azazel.schema.json  notify.yaml
deploy/: azazel-epd.default  docker-compose.yml  nginx-site.conf  nginx.conf  opencanary.conf  vector.toml
docs/: AI_EDGE_IMPLEMENTATION.md  AI_VERIFICATION_REPORT.md  API_REFERENCE.md  API_REFERENCE_ja.md  ARCHITECTURE.md  ARCHITECTURE_ja.md  DEMO.md  ENHANCED_AI_INTEGRATION.md  EPD_SETUP.md  EPD_WORKPLAN.md  INSTALLATION.md  INSTALLATION_ja.md  INTERNAL_NETWORK_CONTROL.md  Minimal_Install_and_Verification.md  NETWORK_SETUP.md  NETWORK_SETUP_ja.md  OLLAMA_INTEGRATION_REPORT.md  OPERATIONS.md  OPERATIONS_ja.md  QOS_TESTING.md  README.md  SURICATA_INSTALLER.md  SURICATA_INTEGRATION_REPORT.md  TROUBLESHOOTING.md  TROUBLESHOOTING_ja.md  WIRELESS_INTEGRATION_REPORT.md  setup.md  wlan_setup.md
installer_old/: 1_install_azazel.sh  2_setup_containers.sh  install_set.sh  raspap-setup.sh
legacy/: README.md  (+2 more)
(+265 files in other folders)
