[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azazel-pi"
version = "1.5.0"
description = "Network Security Monitoring and Response System"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "01rabbit", email = "your.email@example.com" }
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=azazel_pi"

[tool.hatch.build.targets.wheel]
packages = ["azazel_pi"]